# ipopt_eigen_wrapper

./: CMakeLists.txt  Readme.md  package.xml
cmake/: FindIPOPT.cmake
include/: TNLP_EigenDense.hpp  TNLP_EigenDenseExample.hpp  hs071_nlp.hpp
src/: TNLP_EigenDense.cpp  TNLP_EigenDenseExample.cpp  hs071_nlp.cpp  test_TNLP_EigenDense.cpp
